# litex_rp2040_pmod_test

./: README.md  icebreaker.py  spibone_gen.py  test_spi_bone.py
usb2spibone/: CMakeLists.txt  dev_lowlevel.c  dev_lowlevel.h  usb_common.h
